--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   },
   "dependencies": {
     "@picocss/pico": "^1.4.1",
+    "@types/uuid": "^8.3.3",
+    "sass": "^1.43.4",
+    "uuid": "^8.3.2",
     "vue": "^3.2.16"
   },
   "devDependencies": {
